--- a/frontend/src/lib/css/var.css
+++ b/frontend/src/lib/css/var.css
@@ -5,7 +5,7 @@
 	
 	--color1: #1d9bf0;
 	--color2: #146ca8;
-	--color3: #f05950;
+	--color3: #4d0083;
 	--color4: red;
 	--color5: #04AA6D;
 	--color6: goldenrod;
