--- a/frontend/src/routes/layout.main.css
+++ b/frontend/src/routes/layout.main.css
@@ -20,6 +20,10 @@
 	font-weight: 600;
   }
 
+html{
+	user-select: none;
+}
+
 :root,
 code,
 textarea,
@@ -29,12 +33,8 @@ button {
 	font-family: "tisa", 'Segoe UI', Tahoma, Verdana, sans-serif;
 	font-size: 14px;
 }
-html{
-	user-select: none;
-}
-/* body{
-	overflow: hidden;
-} */
+
+
 * {
 	margin: 0;
 	padding: 0;
@@ -42,6 +42,10 @@ html{
 	box-sizing: border-box;
 	outline: none;
 	-webkit-tap-highlight-color: transparent;
+
+	transition-property: background-color, border-color, opacity, outline;
+	transition-duration: 0.2s;
+	transition-timing-function: ease-in-out;
 }
 
 input[type='number']::-webkit-outer-spin-button,
@@ -50,41 +54,3 @@ input[type='number']::-webkit-inner-spin-button {
 	margin: 0;
 }
 
-input[type='number'] {
-	-moz-appearance: textfield;
-}
-
-
-h1 {
-	font-size: 1.2rem;
-}
-h2 {
-	font-size: 1.18rem;
-}
-h3 {
-	font-size: 1.16rem;
-}
-h4 {
-	font-size: 1.12rem;
-}
-h5 {
-	font-size: 1.08rem;
-}
-h6 {
-	font-size: 1.04rem;
-}
-
-.error {
-	color: var(--color4);
-	font-size: 0.8rem;
-}
-
-.h {
-	display: flex;
-	align-items: center;
-	gap: var(--gap2);
-	flex-wrap: wrap;
-}
-.h.space {
-	justify-content: space-between;
-}
