--- a/frontend/src/routes/layout.main.css
+++ b/frontend/src/routes/layout.main.css
@@ -20,20 +20,6 @@
 	font-weight: 600;
   }
 
-html{
-	user-select: none;
-}
-
-:root,
-code,
-textarea,
-select,
-input,
-button {
-	font-family: "tisa", 'Segoe UI', Tahoma, Verdana, sans-serif;
-	font-size: 14px;
-}
-
 
 * {
 	margin: 0;
@@ -48,9 +34,52 @@ button {
 	transition-timing-function: ease-in-out;
 }
 
+html{
+	user-select: none;
+}
+
+
+:root,
+code,
+textarea,
+select,
+input,
+button {
+	font-family: "tisa", 'Segoe UI', Tahoma, Verdana, sans-serif;
+	font-size: 14px;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+	transition: background-color 9999s;
+	-webkit-text-fill-color: var(--accent1);
+}
+
+button,
+input,
+select {
+	padding: var(--sp1);
+	border-radius: var(--br1);
+	border: 2px solid transparent;
+		
+	color: var(--ac2);
+	background-color: var(--ac4);
+}
+
+
+input:hover,
+select:hover{
+	border-color: var(--ac1);
+}
+
+button:hover{
+	background-color: var(--ac3);
+}
+
 input[type='number']::-webkit-outer-spin-button,
 input[type='number']::-webkit-inner-spin-button {
 	-webkit-appearance: none;
 	margin: 0;
 }
-
